--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ dependencies {
               'com.microsoft.sqlserver:mssql-jdbc:7.0.0.jre8',*/
             'com.fasterxml.jackson.core:jackson-databind:2.13.3')
     runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
-    /*runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'*/
+    //runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
     //runtime group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.0'
 
     implementation group: 'cn.hutool', name: 'hutool-core', version: '5.4.0'
