--- a/build.gradle
+++ b/build.gradle
@@ -22,33 +22,24 @@ repositories {
 }
 
 dependencies {
-
     implementation group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
     implementation group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
+    implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
+
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-
-    implementation group: 'org.aspectj', name: 'aspectjrt', version: '1.8.9'
-    implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
-    implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.24'
-    implementation group: 'com.lowagie', name: 'itext', version: '2.1.7'
-    implementation group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
-
-    //compile group: 'net.sf.jasperreports', name: 'jasperreports', version: '6.7.0'
-    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.2'
-    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
-    implementation group: 'net.sf.json-lib', name: 'json-lib', version: '2.4', classifier: 'jdk15'
-
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.59'
-    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.8'
-    //compile group: 'com.itextpdf', name: 'itext-asian', version: '5.1.1'
-
-    /*implementation group: 'org.apache.solr', name: 'solr-solrj', version: '8.6.3'*/
-    /*compile group: 'org.apache.lucene', name: 'lucene-analyzers-smartcn', version: '8.6.3' */
+    /*compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.9'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'*/
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0'
+    implementation group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
+    implementation group: 'cn.hutool', name: 'hutool-core', version: '5.4.0'
 
     implementation(
-            'net.sf.jasperreports:jasperreports:6.7.0',
-
-            'org.mybatis:mybatis:3.4.6', 'log4j:log4j:1.2.17', 'jstl:jstl:1.2', 'javax.servlet:javax.servlet-api:3.1.0',
+            'org.mybatis:mybatis:3.4.6',
+            'jstl:jstl:1.2', 'javax.servlet:javax.servlet-api:3.1.0',
             "org.springframework.security:spring-security-web:$springSecurityVersion",
             "org.springframework.security:spring-security-core:$springSecurityVersion",
             "org.springframework.security:spring-security-config:$springSecurityVersion",
@@ -62,27 +53,13 @@ dependencies {
             "org.springframework:spring-webmvc:$springVersion",
             "org.springframework:spring-test:$springVersion",
 
-            //'com.google.zxing:core:3.3.1',
             'com.belerweb:pinyin4j:2.5.1',
     )
-    runtimeOnly 'org.tukaani:xz:1.8' //runtime
-
-    /*implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.20'*/
-
-
-    runtimeOnly('com.fasterxml.jackson.core:jackson-core:2.13.3',
-            /*  'org.postgresql:postgresql:42.2.16',
-              'com.microsoft.sqlserver:mssql-jdbc:7.0.0.jre8',*/
-            'com.fasterxml.jackson.core:jackson-databind:2.13.3')
-    runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
-    //runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
-    //runtime group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.0'
-
-    implementation group: 'cn.hutool', name: 'hutool-core', version: '5.4.0'
-    //compile group: 'org.bouncycastle', name: 'bcprov-jdk15to18', version: '1.66'
-    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
-    /*implementation 'com.github.axet:java-unrar:1.7.0-8'*/
-
+    //implementation group: 'nl.captcha', name: 'simplecaptcha', version: '1.2.1'
+/*    compile('com.fasterxml.jackson.core:jackson-core:2.9.3',
+            'com.fasterxml.jackson.core:jackson-databind:2.9.3')*/
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
 
     // 依赖maven中不存在的jar
     ext.jarTree = fileTree(dir: 'libs', include: '**/*.jar')
@@ -99,9 +76,14 @@ tasks.withType(JavaCompile) {
     from configurations.runtime
     into 'lib' // 目标位置
 }*/
+task copyJarToDeploy(type: Copy) {
+    dependsOn  ':jar'
+    from  "$buildDir/libs/huangpu-1.0-SNAPSHOT.jar"
+    into "$buildDir/libs/exploded/huangpu-1.0-SNAPSHOT.war/WEB-INF/lib" // 目标位置
+}
 task jarWithoutResources(type: Jar) {
     baseName project.name
-    from("$buildDir/classes/main")
+    from("$buildDir/classes/java/main")
 }
 task showProjectProperties() {
     println "-------------------------"
